--- a/Frontend/src/assets/styles/App.scss
+++ b/Frontend/src/assets/styles/App.scss
@@ -33,9 +33,13 @@ button:focus {
     border: none;
     border-radius: 2em;
     transition: all 0.5s;
+    text-decoration: none;
   &:hover {
     transform: scale(0.9);
   }
 }
 
-
+.Container {
+  max-width: 85%;
+  margin: auto;
+}
