--- a/Frontend/src/assets/styles/components/RememberInfo.scss
+++ b/Frontend/src/assets/styles/components/RememberInfo.scss
@@ -2,10 +2,45 @@
 
 .RememberInfo {
   @include home-themes;
+  height: 100vh;;
   .Logo {
     margin: 0;
+    padding-top: 5%;
   }
-  &__container--form {
-    
+  &__container {
+    width: 50%;
+    margin: auto;
+    &--form--options {
+      input {
+        width: 45%;
+        margin: 1em auto;
+        line-height: 1.2;
+        color: #333333;
+        display: block;
+        background: #fff;
+        border-radius: 2em;
+        padding: 1em;
+        border: none;
+        text-align: center;
+      }
+      span {
+        font-size: 15px;
+        color: #999999;
+        display: flex;
+        align-items: center;
+        position: absolute;
+        bottom: 0;
+        left: 36%;
+        width: inherit;
+        height: 100%;
+        padding-left: 40px;
+        transition: all 0.4s;
+      }
+    }
+    &--form {
+      button {
+        @include home-button-send;
+      }
+    }
   }
 }
