--- a/Frontend/src/assets/styles/containers/Bacteriologist.scss
+++ b/Frontend/src/assets/styles/containers/Bacteriologist.scss
@@ -1,3 +1,5 @@
+@import '../App.scss';
+
 .Patient--search {
   position: relative;
   > input {
@@ -30,29 +32,20 @@
   display: grid;
   grid-template-columns: 25% 50% 25%;
   justify-items: center;
-  border-bottom: 2px solid #19243B;
+  border-bottom: 2px solid #A1A1A1;
   h3 {
     color: #19243B;
   }
 }
 
 .Patient__list--cards {
-  padding-top: 1.5em;
+  margin: 0;
+  padding: 1.5em 0 0 0;
 }
 
 .Patient__card {
-  margin: .5em 0;
-  display: grid;
-  grid-template-columns: 25% 50% 25%;
-  justify-items: center;
-  align-items: center;
-  border: 1px solid #efefef;
-  border-radius: 15px;
-  transition: all .3s;
-  &:hover {
-    background: #f5f5f5;
-  }
+@include cardList;
   .Patient__watch--icon {
-    color: #19243B;
+    @include cardIcon;
   }
 }
