Update with develop branch

--- a/Frontend/src/assets/styles/containers/AddExams.scss
+++ b/Frontend/src/assets/styles/containers/AddExams.scss
@@ -27,3 +27,14 @@
     border: none;
   }
 }
+
+.Add__exam--name--patient {
+  width: 30%;
+  margin-left: auto;
+  background: #E96216;
+  border-radius: 15px;
+  h3 {
+    color: #fff;
+    text-align: center;
+  }
+}
