--- a/Frontend/src/assets/styles/components/Header.scss
+++ b/Frontend/src/assets/styles/components/Header.scss
@@ -1,108 +1,145 @@
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .main-container {
-    margin-block-start: 0em;
-    display: grid;
-    grid-template-columns: 350px 600px 1fr;
-    grid-row: 2fr 2fr;
-    width: 100vw;
-    height: 120px;
-    padding-top: 10px; ;
+  margin-block-start: 0em;
+  display: grid;
+  grid-template-columns: 350px 600px 1fr;
+  grid-row: 2fr 2fr;
+  width: 100vw;
+  height: 120px;
+  padding-top: 10px;
 }
 
-.main-container{
-    background: linear-gradient(to left bottom, #1b2470 50%, #293585 50%);
+.main-container {
+  background: linear-gradient(to left bottom, #1b2470 50%, #293585 50%);
 }
 
 .imagotipo {
-    margin: 0;
-    width: 260px;
-    // margin-top: 20px;
-    height: 75px;
+  margin: 0;
+  width: 260px;
+  // margin-top: 20px;
+  height: 75px;
 }
 
 .iconotipo {
-    width: 100px;
-    margin-left: 20px;
+  width: 100px;
+  margin-left: 20px;
 }
 
 .logotipo {
-    width: 140px;
-    margin-bottom: 5px;
+  width: 140px;
+  margin-bottom: 5px;
 }
 
 .frame {
-    background-color: #16182b;
-    width: 60px;
-    height: 200px;
-    margin-top: 500px;
+  background-color: #16182b;
+  width: 60px;
+  height: 200px;
+  margin-top: 500px;
 }
 
-.tittle-container{
-    display: grid;
-    justify-self: center;
-    width: 500px;
-    height: 75px;
-    // margin-top: 5px;
-}
-
-.tittle {
-    width: 470px;
-    color: #FFB015;
+.tittle-container {
+  display: grid;
+  justify-self: center;
+  width: 500px;
+  height: 75px;
+  // margin-top: 5px;
 }
 
 .tittle {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 600;
+  width: 470px;
+  color: #ffb015;
+}
+
+.tittle {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 600;
 }
 
 .user-container {
-    display: grid;
-    justify-self: flex-end;
-    align-items: flex-end;
-    margin-right: 40px;
+  display: grid;
+  justify-self: flex-end;
+  align-items: flex-end;
+  margin-right: 40px;
 }
 
 .user-icon {
-    width: 40px;
-    display: grid;
-    align-items: end;
+  width: 40px;
+  display: grid;
+  align-items: end;
 }
 
 .patient-indication {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 600;
-    font-size: medium;
-    margin-top: 10px;
-    margin-left: 25px;
-    justify-content: center;
-    color: #FFB015;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 600;
+  font-size: medium;
+  margin-top: 10px;
+  margin-left: 25px;
+  justify-content: center;
+  color: #ffb015;
 }
 
 .namebar {
-    background: #FF5C00;
-    display: grid;
-    grid-column: 3;
-    width: 400px;
-    height: 30px;
-    margin-top: 25px;
-    border: 4px solid red($color: #000000);
-    box-sizing: border-box;
-    border-radius: 30px;
+  background: #ff5c00;
+  display: grid;
+  grid-column: 3;
+  width: 400px;
+  height: 30px;
+  margin-top: 25px;
+  border: 4px solid red($color: #000000);
+  box-sizing: border-box;
+  border-radius: 30px;
 }
 
-.namebar p { 
-    color: white;
-    font-weight: 600;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    margin: 0;
+.namebar p {
+  color: white;
+  font-weight: 600;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  margin: 0;
 }
 
 
+.header__menu {
+	margin-right: 30px;
+}
+
+.header__menu ul {
+  display: none;
+  list-style: none;
+  margin: 0px 0px 0px -14px;
+  padding: 0px;
+  position: absolute;
+  width: 100px;
+  text-align: right;
+}
+
+.header__menu:hover ul,
+ul:hover {
+  display: block;
+}
+
+.header__menu li {
+  margin: 10px 0px;
+}
+
+.header__menu li a {
+  color: white;
+  text-decoration: none;
+}
+
+.header__menu li a:hover {
+  text-decoration: underline;
+}
+
+.header__menu--profile {
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+}
