--- a/Frontend/src/assets/styles/components/Header.scss
+++ b/Frontend/src/assets/styles/components/Header.scss
@@ -3,21 +3,14 @@ $background-color: linear-gradient(to left bottom, #1b2470 50%, #293585 50%);
 $color-font:#FFB015;
 $color-box: #FF5C00;
 
-body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: $fuente-principal;
-}
-
-main {
+.header-container {
     margin-block-start: 0em;
     display: grid;
     grid-template-columns: 350px 600px 1fr;
     grid-row: 2fr 2fr;
 }
 
-main {
+.header-container {
     width: 100vw;
     height: 120px;
     padding-top: 10px; 
@@ -83,7 +76,7 @@ main {
     background: $color-box;
     display: grid;
     grid-column: 3;
-    width: 400px;
+    width: 350px;
     height: 30px;
     margin-top: 25px;
     border: 4px solid red;
@@ -98,7 +91,3 @@ main {
         font-weight: 600;
     }
 }
-
-
-
-
