--- a/Frontend/src/assets/styles/containers/_administrator.scss
+++ b/Frontend/src/assets/styles/containers/_administrator.scss
@@ -1,62 +1,71 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
-}
-
-.mainContainer {
+.Container-Admin {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 15% 15% 15% 1fr;
 }
 
-.mainContainer .searchBox{
-    grid-column: span 3;
+.searchBox{
+    display: flex;
+    border: solid red;
+    grid-column: 1 / 4;
+    justify-content: center;
+    align-items: center;
 }
 
-.searchBox .searchBar{
-    grid-column: span 2;
-    width: 400px;
+.searchbar{
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    padding-left: 20px;
+    width: 250px;
+    border: 1px solid #A1A1A1 ;
 }
 
-.searchBox {
-    position: relative;
-    > input {
-        border: 1px solid #A1A1A1;
-        border-radius: 15px;
-        width: 25%;
+.searchBusqueda {
+    text-align: center;
+    width: 80%;
+    padding-left: 5%;
+    border: none;
+}
+
+.searchBusqueda {
         font-size: 15px;
         line-height: 1.2;
-        color: #333333;
-        display: block;
         height: 35px;
-        border-radius: 25px;
-        padding: 0 30px 0 53px;
     }
-    > span {
-    font-size: 15px;
-    color: #999999;
-    display: flex;
-    align-items: center;
-    position: absolute;
-    border-radius: 25px;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    padding-left: 20px;
-    }
+
+.selectTypeUser {
+    grid-column: 1;
+    justify-content: center;
+    text-align: center;
+    display: block;
 }
 
-.toolBar{
-    display: inline-blog;
-    grid-column: span 3;
+.selectrOderList {
+    grid-column: 2;
+    justify-content: center;
+    text-align: center;
+    display: block;
+}
+
+.selectrOderList select {
+    margin-left: 15px;
+}
+
+.searchIcon {
+    color: #999999;
+}
+
+.check-card {
+    grid-column: 1;
+    text-align: start;
+    margin-left: 15px;
 }
 
 .csvIcon {
     display: grid;
     grid-column: 4;
-    grid-row: 2;
+    grid-row: 2/4;
+    margin: auto;
 }
 
 .addUser {
@@ -64,16 +73,57 @@ body {
     grid-column: 3;
 }
 
+.addUser {
+    display: inline;
+}
+
+.iconContainer {
+    width: 50px;
+    height: 50px;
+}
+.addUser span p {
+    color: #00c2ff;
+    font-size: 15px;
+    font-weight: bold;
+    display: inline-flex;
+    position: relative;
+}
+
+
+
+.fas.fa-plus-circle {
+    font-size: 40px;
+    color: #00c2ff;
+    align-self: center;
+    position: relative;
+    justify-items: center;
+    align-items: center;
+}
+
+.pagination {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    justify-items: center;
+}
+
 .cardContainer {
     background-color: rgb(115, 130, 218);
     grid-column: span 3;
-    grid-row: 3;
+    grid-row: 4;
     height: 200px;
 }
 
-.button-csv {
+.tittle-SideBar {
+    justify-content: center;
+    text-align: center;
+}
+
+#button-csv {
     width: 155px;
     height: 35px;
     border-radius: 15px;
     grid-column: 4;
+    align-content: start;
+    justify-content: center;
 }
