--- a/Frontend/src/assets/styles/containers/PatientList.scss
+++ b/Frontend/src/assets/styles/containers/PatientList.scss
@@ -35,6 +35,7 @@
   grid-template-columns: 25% 50% 25%;
   justify-items: center;
   border-bottom: 2px solid #A1A1A1;
+  text-align: center;
   h3 {
     color: #19243B;
   }
