--- a/Frontend/src/assets/styles/containers/Patient.scss
+++ b/Frontend/src/assets/styles/containers/Patient.scss
@@ -5,15 +5,15 @@ $color-font:#FFB015;
 .mainContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 10% 20% 1fr;
+    grid-template-rows: 10% 15% 1fr;
 }
 
 .tittle__tipeuser {
     display: grid;
     // justify-self: center;
-    grid-column: 2;
+    grid-column: 2/4;
     margin: -60px auto auto auto;
-    width: 400px;
+    width: 300px;
     height: 75px;
     h2 {
         width: 350px;
@@ -44,13 +44,13 @@ $color-font:#FFB015;
 
 .check-item {
     grid-column: 1;
+    grid-row: 2;
+    margin: 15px
 }
 
 .pagination {
     grid-column: 3;
-    justify-content: center;
-    text-align: center;
-    display: block;
+    margin: auto;
 }
 
 #button-download {
@@ -58,8 +58,7 @@ $color-font:#FFB015;
     height: 35px;
     border-radius: 15px;
     grid-column: 4;
-    align-content: start;
-    justify-content: center;
+    margin: auto;
     font-family: Helvetica;
     font-weight: bold;
 }
@@ -70,7 +69,7 @@ $color-font:#FFB015;
     margin-right: 10px;
 }
 
-.exam_section {
-    border: solid rgb(255, 153, 70);
-    grid-column: 1/4;
+.exam-container {
+    display: grid;
+    grid-column: span 3;
 }
