--- a/Frontend/src/assets/styles/containers/_administrator.scss
+++ b/Frontend/src/assets/styles/containers/_administrator.scss
@@ -19,7 +19,7 @@ $fuente-secundaria: Helvetica;
     background-color: #FFFFFF;
     border-radius: 25px;
     padding-left: 20px;
-    width: 250px;
+    width: 290px;
     border: 1px solid #A1A1A1 ;
 }
 
@@ -103,8 +103,8 @@ $fuente-secundaria: Helvetica;
 }
 
 .tittle-SideBar {
+    margin-top: 15px;
     text-align: center;
-    margin-top: 4em;
     font-family: $fuente-secundaria;
     font-weight: bold;
 }
