--- a/Frontend/src/assets/styles/components/User.scss
+++ b/Frontend/src/assets/styles/components/User.scss
@@ -1,10 +1,13 @@
+$color__board--content: rgb(250, 221, 209);
+$color__board--board: rgb(219, 155, 36);
+
 .margen {
-    background-color: rgb(250, 221, 209);
+    background-color: $color__board--content;
     margin: 1em;
 }
 
 .tabla thead {
-    background-color: rgb(219, 155, 36);
+    background-color: $color__board--board;
 }
 
 .tabla th {
