className checkcard alignment

--- a/Frontend/src/assets/styles/containers/_administrator.scss
+++ b/Frontend/src/assets/styles/containers/_administrator.scss
@@ -60,7 +60,7 @@ $fuente-secundaria: Helvetica;
 .check-card p {
     grid-column: 1;
     text-align: start;
-    margin-left: auto;
+    margin-left: 15px;
 }
 
 #checkbox1 {
